--- a/app/src/main/res/layout/viewholder_best_deal.xml
+++ b/app/src/main/res/layout/viewholder_best_deal.xml
@@ -38,7 +38,7 @@
                 android:textColor="@color/dark_blue"
                 android:textSize="18sp"
                 android:textStyle="bold"
-                app:layout_constraintEnd_toStartOf="@+id/priceTxt"
+                app:layout_constraintEnd_toStartOf="@+id/pricetx"
                 app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
@@ -97,7 +97,7 @@
                 app:tint="@color/red" />
 
             <TextView
-                android:id="@+id/priceTxt"
+                android:id="@+id/pricetx"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="8dp"
